--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
       <version>4.1.0</version>
     </dependency>
 
+	<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+	<dependency>
+	    <groupId>org.xerial</groupId>
+	    <artifactId>sqlite-jdbc</artifactId>
+	    <version>3.34.0</version>
+	</dependency>
+
  
   </dependencies>
 </project>
