--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/alg/test.java=UTF-8
 encoding//src/ui/AlertDialogFactory.java=UTF-8
 encoding//src/ui/MainPage.java=UTF-8
 encoding//src/ui/MenuBarEvents.java=UTF-8
